--- a/smartbizdash-frontend/package.json
+++ b/smartbizdash-frontend/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.3.6",
     "chart.js": "^4.4.9",
     "dayjs": "^1.11.13",
+    "flowbite-react": "^0.11.7",
     "lexical": "^0.31.2",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
@@ -19,13 +20,16 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.0",
     "react-scripts": "5.0.1",
+    "tailwindcss": "^4.1.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "postinstall": "patch-package"
+
   },
   "eslintConfig": {
     "extends": [
@@ -44,5 +48,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "patch-package": "^8.0.0",
+    "postinstall-postinstall": "^2.1.0"
   }
 }
