--- a/dashwise/package.json
+++ b/dashwise/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.3.6",
     "chart.js": "^4.4.9",
     "dayjs": "^1.11.13",
+    "flowbite": "^3.1.2",
     "flowbite-react": "^0.11.7",
     "lexical": "^0.31.2",
     "react": "^19.1.0",
@@ -20,7 +21,6 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.0",
     "react-scripts": "5.0.1",
-    "tailwindcss": "^4.1.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -29,7 +29,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "postinstall": "patch-package"
-
   },
   "eslintConfig": {
     "extends": [
