--- a/dashwise/package.json
+++ b/dashwise/package.json
@@ -14,7 +14,10 @@
     "dayjs": "^1.11.13",
     "flowbite": "^3.1.2",
     "flowbite-react": "^0.11.7",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.28",
     "lexical": "^0.31.2",
+    "papaparse": "^5.5.3",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
